Refactor tests and update Spring Boot version
The commit refactors two integration test classes, `HelloRestControllerIntegrationTest` and `HelloControllerMockMVCTest`, to improve the assertions and test readability. The Spring Boot version in the `build.gradle` file has also been updated to 3.2.3 from 3.2.0. Additionally, greetings generation in `HelloRestController` has been updated to make use of Java's formatted method.