@@ -10,6 +10,6 @@ public class HelloRestController {
 
     @GetMapping("/rest")
     public Greeting greet(@RequestParam(defaultValue = "World") String name) {
-        return new Greeting(String.format("Hello, %s!", name));
+        return new Greeting("Hello, %s!".formatted(name));
     }
 }
